# bedtimenews-agent

./: .env.example  .gitignore  Caddyfile  README.md  README.zh-CN.md  THIRD_PARTY_NOTICES.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
agent/: .dockerignore  Dockerfile  README.md  pyproject.toml  requirements.txt
agent/src/: agent.py  cache.py  chat.py  eval_agent.py  eval_queries.py  eval_retriever.py  graph.py  main.py  models.py  retriever.py  settings.py  test_agent.py  test_data.py  test_retriever.py  vector_db.py
agent/src/providers/: __init__.py  base.py
agent/src/providers/deepseek/: __init__.py
agent/src/providers/openai/: __init__.py
agent/src/providers/siliconflow/: __init__.py
agent/tests/: test_cache.py
frontend/: .dockerignore  Dockerfile  README.md  app.py  chainlit.md  pyproject.toml  requirements.txt  server.py  starters.py
frontend/.chainlit/: config.toml
frontend/public/: custom.css  custom.js
frontend/static/: app.js  index.html  styles.css
indexer/: Dockerfile  README.md  index_config.yml  pyproject.toml  requirements.txt
indexer/data/: README.md
indexer/src/: change_detector.py  chunker.py  debugger.py  document_loader.py  embeddings.py  entrypoint.py  file_scanner.py  git_sync.py  models.py  paths.py  pipeline.py  scheduler.py  settings.py  stats.py  vector_db.py
indexer/src/providers/: __init__.py  base.py  factory.py
indexer/src/providers/openai/: __init__.py
indexer/src/providers/siliconflow/: __init__.py
indexer/tests/: conftest.py  test_change_detector.py  test_chunker.py  test_file_scanner.py
storage/postgres/: init.sh  init.sql
