[project]
name = "bedtimenews-agent"
version = "0.1.0"
description = "Agentic RAG retrieval API for Bedtime News"
requires-python = ">=3.12"
dependencies = [
    # Web Framework
    "fastapi>=0.138.0",
    "uvicorn[standard]>=0.49.0",
    # Database
    "psycopg2-binary==2.9.11",
    # LangChain
    "langchain-core>=1.4.8",
    "langchain-openai>=1.3.2",
    "langchain-postgres>=0.0.16",
    "langgraph>=0.2.0",
    # Validation & Config
    "pydantic>=2.13.4",
    "pydantic-settings>=2.10.1",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

# Dependency-only project: application code is run from ./src at runtime,
# not installed as a package, so disable package discovery.
[tool.setuptools]
py-modules = []

[tool.pytest.ini_options]
# Run from this component dir (`cd agent && pytest`) so its `src` namespace
# is the only one on the path — agent/ and indexer/ both define `src.*`.
testpaths = ["tests"]
pythonpath = ["."]
