[project]
name = "bedtimenews-frontend"
version = "0.1.0"
description = "Custom FastAPI + static UI frontend for Bedtime News"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.138.0",
    "uvicorn[standard]>=0.49.0",
    "httpx>=0.28.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

# Dependency-only project: application code is run from server.py at runtime,
# not installed as a package, so disable package discovery.
[tool.setuptools]
py-modules = []
